--- a/sampleapp/frontend/app/templates/home.html
+++ b/sampleapp/frontend/app/templates/home.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-  <h1>Flask Kubernetes frontend</h1>
-  <p>This is a Flask application that runs as a Docker container inside Kubernetes Minikube on my Laptop.</p>
+  <h1>Flask Kubernetes frontend cloudcover</h1>
+  <p>This is a Flask application that runs as a Docker container inside Kubernetes Minikube on my Laptop test by kunal.</p>
   <p>
     <span>Message from backend: </span>
     <code id="backend-msg">None</code>
