--- a/sampleapp/frontend/app/templates/home.html
+++ b/sampleapp/frontend/app/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
   <h1>Flask Kubernetes frontend CloudCover</h1>
-  <p>This is a Flask application that runs as a Docker container inside Kubernetes Minikube on kunal's laptop CloudCover.</p>
+  <p>This is a Flask application that runs as a Docker container inside Kubernetes Minikube on kuna laptop CloudCover.</p>
   <p>
     <span>Message from backend: </span>
     <code id="backend-msg">None</code>
