added canary service

--- a/sampleapp/frontend/app/templates/base.html
+++ b/sampleapp/frontend/app/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>Flask Kubernetes CloudCoverrrrr</title>
+    <title>Flask Kubernetes test CloudCoverrrrr</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">    
     <meta name="robots" content="noindex">
