--- a/sampleapp/frontend/app/templates/home.html
+++ b/sampleapp/frontend/app/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h1>Flask Kubernetes kunal CloudCover</h1>
+  <h1>Flask Kubernetes kunal </h1>
   <p>This is a Flask application that runs as a Docker container inside Kubernetes Minikube on my laptop CloudCover.</p>
   <p>
     <span>Message from backend: </span>
