added canary service

--- a/sampleapp/frontend/app/templates/home.html
+++ b/sampleapp/frontend/app/templates/home.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-  <h1>Flask Kubernetes kunal </h1>
-  <p>This is a Flask application that runs as a Docker container inside Kubernetes Minikube on my laptop CloudCover.</p>
+  <h1>Flask Kubernetes kunalJha </h1>
+  <p>This is a Flask application that runs as a Docker container inside Kubernetes Minikube on CloudCover.</p>
   <p>
     <span>Message from backend: </span>
     <code id="backend-msg">None</code>
